<resources>
    <string name="app_name">My MovieApp</string>
    <string name="search">Search</string>
    <string name="search_hint">Search movies and tv shows</string>
    <string name="tv">TV</string>
    <string name="movies">Movies</string>
    <string name="watchlist">Watchlist</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="stay_updated_movies">Stay updated with the latest movies</string>
    <string name="most_popular_tv_shows">Most popular TV shows</string>
    <string name="highest_rated_tv_shows_of_all_time">Highest rated Tv shows of all time</string>
    <string name="on_air">On Air</string>
    <string name="currently_airing_tv_shows">Currently airing TV shows</string>
    <string name="image_movie_tv_show">Image Movie / Tv Show</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="add_to_watch_list">Add to Watchlist</string>
    <string name="remove_from_watch_list">Remove from Watchlist</string>

    <string-array name="watch_list_filter">
        <item>All</item>
        <item>Movies</item>
        <item>TV Shows</item>
    </string-array>
</resources>